Agregando inicios de SEO de Gisea

--- a/about.html
+++ b/about.html
@@ -4,11 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Sobre Nuestra Agencia Digital: Stack y Clientes | GISEA</title>
+    <meta name="description"
+        content="Conoce GISEA, tu agencia digital internacional. Descubre nuestros valores, las tecnologías que dominamos y los clientes globales que confían en nuestro trabajo.">
+
+    <meta property="og:title" content="Sobre Nuestra Agencia Digital: Stack y Clientes | GISEA">
+    <meta property="og:description"
+        content="Conoce GISEA, tu agencia digital internacional. Descubre nuestros valores, las tecnologías que dominamos y los clientes globales que confían en nuestro trabajo.">
+    <meta property="og:image" content="https://giseamex.com/img/Header-About%20Us.png">
+    <meta property="og:url" content="https://giseamex.com/about.html">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sobre Nuestra Agencia Digital: Stack y Clientes | GISEA">
+    <meta name="twitter:description"
+        content="Conoce GISEA, tu agencia digital internacional. Descubre nuestros valores, las tecnologías que dominamos y los clientes globales que confían en nuestro trabajo.">
+    <meta name="twitter:image" content="https://giseamex.com/img/Header-About%20Us.png">
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
     <link rel="stylesheet" href="./css/aos/aos.css">
-    <title>About</title>
 </head>
 
 <body>
@@ -49,9 +66,11 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="servicios_gisea/recursos_humanos.html" data-translate="dropdownRecursos">Recursos
+                                <li><a class="dropdown-item" href="servicios_gisea/recursos_humanos.html"
+                                        data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
-                                <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
+                                <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html"
+                                        data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
                                 <li><a class="dropdown-item" href="./servicios_gisea/influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
@@ -103,7 +122,8 @@
                                         alt="linkedin" class="red-social linkedin">
                                         <i class="fa-brands fa-linkedin fa-xl"></i>
                                     </a>
-                                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook" class="red-social facebook">
+                                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook"
+                                        class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
                                 </div>
@@ -403,7 +423,8 @@
             <div class="mision-vision-container" data-aos="fade-up">
                 <div class="mision-card">
                     <h2 data-translate="misionTitle">MISIÓN</h2>
-                    <p data-translate="misionText">Desarrollar productos, servicios de calidad y manteniendo un buen servicio y satisfacción del cliente.</p>
+                    <p data-translate="misionText">Desarrollar productos, servicios de calidad y manteniendo un buen
+                        servicio y satisfacción del cliente.</p>
                 </div>
                 <div class="vision-card">
                     <h2 data-translate="visionTitle">VISIÓN</h2>
@@ -506,7 +527,7 @@
                             <div class="client-logo" data-aos="fade-up">
                                 <img src="img/clients-img/gategroup.png" alt="gategroup">
                             </div>
-                             <div class="client-logo" data-aos="fade-up">
+                            <div class="client-logo" data-aos="fade-up">
                                 <a href="https://soyliagarrido.com/" target="_blank" rel="noopener noreferrer">
                                     <img src="img/clients-img/soy_lia_garrido_logo.PNG" alt="Soy Lia Garrido"
                                         style="width: 120px; margin-top: -48px;">
@@ -529,7 +550,8 @@
             </div>
             <div class="footer-bottom d-flex justify-content-between align-items-center">
                 <div class="footer-contact">
-                    <a href="https://wa.me/5215511234567" target="_blank" alt="whatsapp" class="red-social-footer whatsapp-contact">
+                    <a href="https://wa.me/5215511234567" target="_blank" alt="whatsapp"
+                        class="red-social-footer whatsapp-contact">
                         <i class="fa-brands fa-whatsapp fa-xl"></i>
                         <span class="whatsapp-text">WhatsApp</span>
                     </a>
@@ -546,10 +568,12 @@
                     <a href="" alt="instagram" class="red-social-footer">
                         <i class="fa-brands fa-instagram fa-xl"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank" alt="linkedin" class="red-social-footer">
+                    <a href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank" alt="linkedin"
+                        class="red-social-footer">
                         <i class="fa-brands fa-linkedin fa-xl"></i>
                     </a>
-                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook" class="red-social-footer">
+                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook"
+                        class="red-social-footer">
                         <i class="fa-brands fa-facebook fa-xl"></i>
                     </a>
                 </div>
