--- a/index.html
+++ b/index.html
@@ -2,16 +2,68 @@
 <html lang="en">
 
 <head>
+    <!-- === META TAGS BÁSICOS === -->
+    <!-- Codificación UTF-8 para caracteres especiales y acentos -->
     <meta charset="UTF-8">
+    <!-- Responsive design para móviles y tablets -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- === SEO PRINCIPAL === -->
+    <!-- Título principal - Aparece en Google y pestaña del navegador (50-60 chars) -->
+    <title>Agencia Digital Internacional: Desarrollo Web y Soluciones IT | GISEA</title>
+    <!-- Descripción en resultados de Google - Influye en clicks (140-160 chars) -->
+    <meta name="description"
+        content="GISEA, tu agencia digital global. Ofrecemos desarrollo web, RRHH y marketing de influencers en México, Estados Unidos, América Latina y Europa.">
+
+    <!-- === SEO ADICIONAL === -->
+    <!-- Autor/empresa - Mejora credibilidad y autoridad -->
+    <meta name="author" content="GISEA Agency">
+    <!-- Color de barra móvil - Mejora UX en dispositivos móviles -->
+    <meta name="theme-color" content="#c49c3c">
+
+    <!-- === OPEN GRAPH (Facebook, LinkedIn, WhatsApp) === -->
+    <!-- Tipo de contenido para redes sociales -->
+    <meta property="og:type" content="website">
+    <!-- Título al compartir (40-60 chars) -->
+    <meta property="og:title" content="GISEA | Agencia Digital en México con Proyección Internacional">
+    <!-- Descripción al compartir (130-160 chars) -->
+    <meta property="og:description"
+        content="Tu socio digital en México y el mundo. Expertos en desarrollo web, RRHH y marketing de influencers para Estados Unidos, América Latina y Europa.">
+    <!-- Imagen al compartir (1200x630px recomendado) -->
+    <meta property="og:image" content="https://giseamex.com/img/gisea-logo.png">
+    <!-- URL oficial de la página -->
+    <meta property="og:url" content="https://giseamex.com/">
+    <!-- Nombre del sitio web -->
+    <meta property="og:site_name" content="GISEA Agency">
+    <!-- Idioma principal: español de México -->
+    <meta property="og:locale" content="es_MX">
+    <!-- Idioma alternativo: inglés de Estados Unidos -->
+    <meta property="og:locale:alternate" content="en_US">
+
+    <!-- === TWITTER CARDS === -->
+    <!-- Tipo de tarjeta: imagen grande (recomendado) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <!-- Título en Twitter (50-60 chars) -->
+    <meta name="twitter:title" content="GISEA | Agencia Digital en México con Proyección Internacional">
+    <!-- Descripción en Twitter (120-160 chars) -->
+    <meta name="twitter:description"
+        content="Tu socio digital en México y el mundo. Expertos en desarrollo web, RRHH y marketing de influencers para Estados Unidos, América Latina y Europa.">
+    <!-- Imagen en Twitter (1200x600px recomendado) -->
+    <meta name="twitter:image" content="https://giseamex.com/img/gisea-logo.png">
+    <!-- Cuenta oficial de Twitter -->
+    <meta name="twitter:site" content="@giseaagency">
+    <!-- Creador del contenido -->
+    <meta name="twitter:creator" content="@giseaagency">
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
     <link rel="stylesheet" href="./css/aos/aos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Gisea Agency</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D82C62QHR9"></script>
@@ -76,9 +128,11 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="servicios_gisea/recursos_humanos.html" data-translate="dropdownRecursos">Recursos
+                                <li><a class="dropdown-item" href="servicios_gisea/recursos_humanos.html"
+                                        data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
-                                <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
+                                <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html"
+                                        data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
                                 <li><a class="dropdown-item" href="./servicios_gisea/influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
@@ -168,7 +222,8 @@
                                 <img src="img/slide/gisea_logo.png" alt="Logo GISEA" class="gisea-logo-slide">
                             </div>
                             <h1 class="gisea-title">GISEA</h1>
-                            <p class="gisea-subtitle" data-translate="carouselGiseaSubtitle">"Hacemos Realidad tus Proyectos"</p>
+                            <p class="gisea-subtitle" data-translate="carouselGiseaSubtitle">"Hacemos Realidad tus
+                                Proyectos"</p>
                         </div>
                     </div>
                 </div>
@@ -178,27 +233,33 @@
                         <div class="carousel-text-overlay">
                             <h1 class="web-dev-title" data-translate="carouselWebDevTitle">Desarollo web</h1>
                             <div class="golden-line"></div>
-                            <p class="web-dev-subtitle" data-translate="carouselWebDevSubtitle">"Creamos el sitio para tu compañia"</p>
+                            <p class="web-dev-subtitle" data-translate="carouselWebDevSubtitle">"Creamos el sitio para
+                                tu compañia"</p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                     <div class="position-relative">
-                        <img src="img/slide/tercer_banner_asesoramiento.png" class="d-block w-100 img-fluid" alt="Developer Training">
+                        <img src="img/slide/tercer_banner_asesoramiento.png" class="d-block w-100 img-fluid"
+                            alt="Developer Training">
                         <div class="carousel-text-overlay">
-                            <h1 class="developer-training-title" data-translate="carouselTrainingTitle">Capacitacion it</h1>
+                            <h1 class="developer-training-title" data-translate="carouselTrainingTitle">Capacitacion it
+                            </h1>
                             <div class="golden-line"></div>
-                            <p class="developer-training-subtitle" data-translate="carouselTrainingSubtitle">"Crece tus Habilidades y Conviértete en un Profesional"</p>
+                            <p class="developer-training-subtitle" data-translate="carouselTrainingSubtitle">"Crece tus
+                                Habilidades y Conviértete en un Profesional"</p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                     <div class="position-relative">
-                        <img src="img/slide/baner_recursos_humanos.png" class="d-block w-100 img-fluid" alt="Human Resources">
+                        <img src="img/slide/baner_recursos_humanos.png" class="d-block w-100 img-fluid"
+                            alt="Human Resources">
                         <div class="carousel-text-overlay">
                             <h1 class="human-resources-title" data-translate="carouselHRTitle">Recursos Humanos</h1>
                             <div class="golden-line"></div>
-                            <p class="human-resources-subtitle" data-translate="carouselHRSubtitle">"Encontramos el Talento Perfecto para tu Empresa"</p>
+                            <p class="human-resources-subtitle" data-translate="carouselHRSubtitle">"Encontramos el
+                                Talento Perfecto para tu Empresa"</p>
                         </div>
                     </div>
                 </div>
@@ -230,7 +291,11 @@
                 <h1 data-translate="titleSobreNosotros">Sobre Nosotros</h1>
             </div>
             <h3 class="about-alineacion" data-translate="aboutDescription">
-                Somos una agencia digital internacional con presencia en <strong>México, Estados Unidos, España y Argentina</strong>. Nos especializamos en potenciar tu negocio a través de soluciones de <strong>desarrollo de software, desarrollo web</strong> y la producción de <strong>medios audiovisuales</strong>. Además, contamos con expertos en <strong>Recursos Humanos</strong> para la <strong>capacitación de programadores</strong> y la gestión de <strong>talento de influencers</strong>, garantizando el éxito de tu estrategia digital.
+                Somos una agencia digital internacional con presencia en <strong>México, Estados Unidos y España</strong>. Nos especializamos en potenciar tu negocio a través de soluciones de
+                <strong>desarrollo de software, desarrollo web</strong> y la producción de <strong>medios
+                    audiovisuales</strong>. Además, contamos con expertos en <strong>Recursos Humanos</strong> para la
+                <strong>capacitación de programadores</strong> y la gestión de <strong>talento de influencers</strong>,
+                garantizando el éxito de tu estrategia digital.
             </h3>
         </div>
     </section>
@@ -395,7 +460,8 @@
             </div>
             <div class="footer-bottom d-flex justify-content-between align-items-center">
                 <div class="footer-contact">
-                    <a href="https://wa.me/5215511234567" target="_blank" alt="whatsapp" class="red-social-footer whatsapp-contact">
+                    <a href="https://wa.me/5215511234567" target="_blank" alt="whatsapp"
+                        class="red-social-footer whatsapp-contact">
                         <i class="fa-brands fa-whatsapp fa-xl"></i>
                         <span class="whatsapp-text">WhatsApp</span>
                     </a>
