--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -4,6 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Desarrollo Web Profesional - Agencia Digital Internacional | GISEA Agency</title>
+    <meta name="description" content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo. Paquetes desde $3,000 MXN. ¡Contáctanos hoy!">
+
+    <meta property="og:title" content="Desarrollo Web Profesional - Agencia Digital Internacional | GISEA Agency">
+    <meta property="og:description" content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo. Paquetes desde $3,000 MXN.">
+    <meta property="og:image" content="img/header_desarollo_web.jpg">
+    <meta property="og:url" content="https://giseamex.com/service_desarollo_web.html">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Desarrollo Web Profesional - Agencia Digital Internacional | GISEA Agency">
+    <meta name="twitter:description" content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo.">
+    <meta name="twitter:image" content="img/header_desarollo_web.jpg">
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
@@ -17,8 +32,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-
-    <title data-translate="servicePageTitle">Desarollo Web</title>
 </head>
 <style>
     @keyframes rotateIn {
