--- a/servicios_gisea/capacitacion_it.html
+++ b/servicios_gisea/capacitacion_it.html
@@ -4,7 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capacitación IT</title>
+
+    <title>Capacitación IT: Asesorías en Lenguajes y Frameworks | GISEA</title>
+    <meta name="description" content="Eleva tus habilidades con nuestra capacitación IT. Ofrecemos cursos y asesorías en HTML, JS, PHP, Node.js, MySQL y más. ¡Inicia tu aprendizaje hoy!">
+
+    <meta property="og:title" content="Capacitación Profesional en IT | GISEA">
+   <meta property="og:description" content="Domina las tecnologías más demandadas con nuestros cursos y asesorías especializadas en desarrollo web y bases de datos.">
+    <meta property="og:image" content="https://giseamex.com/img/header-capacitacion-it.png">
+    <meta property="og:url" content="https://giseamex.com/capacitacion_it.html">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Capacitación Profesional en IT | GISEA">
+    <meta name="twitter:description" content="Domina las tecnologías más demandadas con nuestros cursos y asesorías especializadas en desarrollo web y bases de datos.">
+    <meta name="twitter:image" content="https://giseamex.com/img/header-capacitacion-it.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
