--- a/servicios_gisea/empresas_grandes_corp.html
+++ b/servicios_gisea/empresas_grandes_corp.html
@@ -2,8 +2,42 @@
 <html lang="en">
 
 <head>
+    <!-- === META TAGS BÁSICOS === -->
+    <!-- Codificación UTF-8 para caracteres especiales y acentos -->
     <meta charset="UTF-8">
+    <!-- Responsive design para móviles y tablets -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- === SEO PRINCIPAL === -->
+    <!-- Título principal - Aparece en Google y pestaña del navegador (50-60 chars) -->
+    <title>Desarrollo Web Corporativo para Empresas Grandes desde $9,999 MXN | GISEA</title>
+    <!-- Descripción en resultados de Google - Influye en clicks (140-160 chars) -->
+    <meta name="description" content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido. ¡Soluciones enterprise!">
+
+    <!-- === OPEN GRAPH (Facebook, LinkedIn, WhatsApp) === -->
+    <!-- Tipo de contenido para redes sociales -->
+    <meta property="og:type" content="website">
+    <!-- Título al compartir (40-60 chars) -->
+    <meta property="og:title" content="Desarrollo Web Corporativo para Empresas Grandes desde $9,999 MXN | GISEA">
+    <!-- Descripción al compartir (130-160 chars) -->
+    <meta property="og:description" content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido para empresas grandes.">
+    <!-- Imagen al compartir (1200x630px recomendado) -->
+    <meta property="og:image" content="https://giseamex.com/img/servicios/empresas_grandes.png">
+    <!-- URL oficial de la página -->
+    <meta property="og:url" content="https://giseamex.com/desarrollo-web/empresas_grandes_corp.html">
+    <!-- Idioma principal: español de México -->
+    <meta property="og:locale" content="es_MX">
+
+    <!-- === TWITTER CARDS === -->
+    <!-- Tipo de tarjeta: imagen grande (recomendado) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <!-- Título en Twitter (50-60 chars) -->
+    <meta name="twitter:title" content="Desarrollo Web Corporativo para Empresas Grandes desde $9,999 MXN | GISEA">
+    <!-- Descripción en Twitter (120-160 chars) -->
+    <meta name="twitter:description" content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido para empresas grandes.">
+    <!-- Imagen en Twitter (1200x600px recomendado) -->
+    <meta name="twitter:image" content="https://giseamex.com/img/servicios/empresas_grandes.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
@@ -25,8 +59,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-
-    <title>Empresas Grandes | Corporativos</title>
 </head>
 <style>
     @keyframes rotateIn {
