--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GISEA Influencers - Marketing Digital</title>
+
+    <title>Marketing de Influencers en México e Internacional | GISEA</title>
+    <meta name="description" content="Potenciamos tu marca con campañas de influencers en México y a nivel internacional. Estrategias para Instagram, TikTok y YouTube que generan impacto real.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Marketing de Influencers en México e Internacional | GISEA">
+    <meta property="og:description" content="Conectamos tu marca con los influencers correctos para campañas de alto impacto en México y el mundo.">
+    <meta property="og:image" content="https://giseamex.com/img/servicios/influencers/header-influencers.png">
+    <meta property="og:url" content="https://zonoxply29.github.io/Gisea_web/servicios_gisea/influencers.html">
+    <meta property="og:locale" content="es_MX">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Marketing de Influencers en México e Internacional | GISEA">
+    <meta name="twitter:description" content="Conectamos tu marca con los influencers correctos para campañas de alto impacto en México y el mundo.">
+    <meta name="twitter:image" content="https://giseamex.com/img/servicios/influencers/header-influencers.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
