--- a/servicios_gisea/recursos_humanos.html
+++ b/servicios_gisea/recursos_humanos.html
@@ -3,7 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recursos Humanos</title>
+
+    <title>Servicios de Recursos Humanos en México e Internacional | GISEA</title>
+    <meta name="description" content="Soluciones de Recursos Humanos en México y el mundo. Nos especializamos en reclutamiento, evaluación de desempeño y capacitación de talento. ¡Potencia tu equipo!">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Servicios de Recursos Humanos en México e Internacional | GISEA">
+    <meta property="og:description" content="Nos especializamos en reclutamiento, evaluación de desempeño y capacitación de talento para empresas en México y a nivel internacional.">
+    <meta property="og:image" content="https://giseamex.com/img/header_recursos_humanos.png">
+    <meta property="og:url" content="https://giseamex.com/recursos_humanos.html">
+    <meta property="og:locale" content="es_MX">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Servicios de Recursos Humanos en México e Internacional | GISEA">
+    <meta name="twitter:description" content="Nos especializamos en reclutamiento, evaluación de desempeño y capacitación de talento para empresas en México y a nivel internacional.">
+    <meta name="twitter:image" content="https://giseamex.com/img/header_recursos_humanos.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
