--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -4,6 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Desarrollo Web para Negocios Pequeños desde $3,000 MXN | GISEA</title>
+    <meta name="description" content="Sitios web profesionales para negocios pequeños y PYMEs desde $3,000 MXN. Hospedaje incluido por 3 años, plataforma moderna y funcional. ¡Impulsa tu negocio digital!">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Desarrollo Web para Negocios Pequeños desde $3,000 MXN | GISEA">
+    <meta property="og:description" content="Sitios web profesionales para negocios pequeños y PYMEs. Hospedaje incluido por 3 años, plataforma moderna y funcional desde $3,000 MXN.">
+    <meta property="og:image" content="https://giseamex.com/img/web-service/negocios_pequenos.png">
+    <meta property="og:url" content="https://giseamex.com/desarrollo-web/negocios_pequenos.html">
+    <meta property="og:locale" content="es_MX">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Desarrollo Web para Negocios Pequeños desde $3,000 MXN | GISEA">
+    <meta name="twitter:description" content="Sitios web profesionales para negocios pequeños y PYMEs. Hospedaje incluido por 3 años, plataforma moderna y funcional desde $3,000 MXN.">
+    <meta name="twitter:image" content="https://giseamex.com/img/web-service/negocios_pequenos.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
@@ -25,8 +41,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-
-    <title>Negocios pequeños</title>
 </head>
 <style>
     @keyframes rotateIn {
