--- a/servicios_gisea/produccion_digital.html
+++ b/servicios_gisea/produccion_digital.html
@@ -1,8 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- === META TAGS BÁSICOS === -->
+    <!-- Codificación UTF-8 para caracteres especiales y acentos -->
     <meta charset="UTF-8">
+    <!-- Responsive design para móviles y tablets -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- === SEO PRINCIPAL === -->
+    <!-- Título principal - Aparece en Google y pestaña del navegador (50-60 chars) -->
+    <title>Producción Digital: Contenido, Video y Diseño Profesional | GISEA</title>
+    <!-- Descripción en resultados de Google - Influye en clicks (140-160 chars) -->
+    <meta name="description" content="Servicios de producción digital profesional. Creación de contenido, videos corporativos, diseño gráfico y marketing digital. ¡Eleva tu marca digital!">
+
+    <!-- === SEO INTERNACIONAL (JavaScript Translation) === -->
+    <!-- Idioma principal del contenido -->
+    <meta name="language" content="es">
+    <!-- País objetivo principal -->
+    <meta name="geo.region" content="MX">
+    <!-- Mercados objetivo (países donde opera GISEA) -->
+    <meta name="geo.placename" content="México, Estados Unidos, España">
+    
+    <!-- === MISMA URL PARA TODOS LOS IDIOMAS === -->
+    <!-- URL canónica única (tu sistema actual funciona así) -->
+    <link rel="canonical" href="https://giseamex.com/servicios/produccion-digital">
+
+    <!-- === OPEN GRAPH MULTIIDIOMA === -->
+    <!-- Tipo de contenido para redes sociales -->
+    <meta property="og:type" content="website">
+    <!-- Título al compartir (40-60 chars) -->
+    <meta property="og:title" content="Producción Digital: Contenido, Video y Diseño Profesional | GISEA">
+    <!-- Descripción al compartir (130-160 chars) -->
+    <meta property="og:description" content="Servicios de producción digital profesional. Creación de contenido, videos corporativos, diseño gráfico y marketing digital para elevar tu marca.">
+    <!-- Imagen al compartir (1200x630px recomendado) -->
+    <meta property="og:image" content="https://giseamex.com/img/servicios/produccion_digital.png">
+    <!-- URL oficial de la página -->
+    <meta property="og:url" content="https://giseamex.com/servicios/produccion-digital">
+    <!-- Idioma principal: español de México -->
+    <meta property="og:locale" content="es_MX">
+    <!-- Idiomas alternativos disponibles EN LA MISMA URL -->
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:locale:alternate" content="ja_JP">
+
+    <!-- === TWITTER CARDS INTERNACIONAL === -->
+    <!-- Tipo de tarjeta: imagen grande (recomendado) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <!-- Título en Twitter (50-60 chars) -->
+    <meta name="twitter:title" content="Producción Digital: Contenido, Video y Diseño Profesional | GISEA">
+    <!-- Descripción en Twitter (120-160 chars) -->
+    <meta name="twitter:description" content="Servicios de producción digital profesional. Creación de contenido, videos corporativos, diseño gráfico y marketing digital para elevar tu marca.">
+    <!-- Imagen en Twitter (1200x600px recomendado) -->
+    <meta name="twitter:image" content="https://giseamex.com/img/servicios/produccion_digital.png">
+
+    <!-- === META TAGS ADICIONALES === -->
+    <!-- Robots - Instrucciones para motores de búsqueda -->
+    <meta name="robots" content="index, follow">
+    <!-- Autor/empresa - Mejora credibilidad internacional -->
+    <meta name="author" content="GISEA Agency">
+    <!-- Color del tema móvil -->
+    <meta name="theme-color" content="#c49c3c">
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
@@ -16,7 +73,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-    <title>Produccion Digital</title>
 </head>
 <style>
     @keyframes rotateIn {
